--- a/image.html
+++ b/image.html
@@ -8,11 +8,17 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@あなたのXユーザー名">
     
-    <meta property="https://mnoprime.github.io/x-link/" content="https://your-domain.com/"> <meta property="og:title" content="表示させたいタイトル">
-    <meta property="og:description" content="簡単な説明文（表示されない場合もあります）">
-    <meta property="https://mnoprime.github.io/x-link/image.jpg" content="https://your-domain.com/image.jpg"> <meta http-equiv="refresh" content="0; url=https://飛ばしたい本当のリンク先.com/">
+    <meta property="og:url" content="https://your-domain.com/"> 
+    <meta property="og:title" content="これは必見">
+    <meta property="og:description" content="ここから見れるよ！">
+
+    <meta property="og:image" content="【ここに画像のURLを入れる】">
+
+    <meta http-equiv="refresh" content="0; url=【https://00m.in/FHqQZ】">
 </head>
 <body>
-    <p>自動的に移動します。移動しない場合は<a href="https://飛ばしたい本当のリンク先.com/">こちら</a>をクリックしてください。</p>
+    <p>自動的に移動します。移動しない場合は<a href="【https://00m.in/FHqQZ】">こちら</a>をクリックしてください。</p>
+</body>
+</html>
 </body>
 </html>
