--- a/image.html
+++ b/image.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="これは必見">
     <meta property="og:description" content="ここから見れるよ！">
 
-    <meta property="og:image" content="【ここに画像のURLを入れる】">
+    <meta property="og:image" content="【twtr-snstv1.webp】">
 
     <meta http-equiv="refresh" content="0; url=【https://00m.in/FHqQZ】">
 </head>
@@ -22,3 +22,4 @@
 </html>
 </body>
 </html>
+
