--- a/image.html
+++ b/image.html
@@ -14,7 +14,7 @@
 
     <meta property="og:image" content="【twtr-snstv1.webp】">
 
-    <meta http-equiv="refresh" content="0; url=【https://00m.in/FHqQZ】">
+    <meta http-equiv="refresh" content="0; url=">
 </head>
 <body>
     <p>自動的に移動します。移動しない場合は<a href="【https://00m.in/FHqQZ】">こちら</a>をクリックしてください。</p>
@@ -22,4 +22,5 @@
 </html>
 </body>
 </html>
+
 
