--- a/image.html
+++ b/image.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="これは必見">
     <meta property="og:description" content="ここから見れるよ！">
 
-    <meta property="og:image" content="【twtr-snstv1.webp】">
+    <meta property="og:image" content="https://github.com/mnoprime/x-link.git">
 
     <meta http-equiv="refresh" content="0; url=">
 </head>
@@ -22,5 +22,6 @@
 </html>
 </body>
 </html>
+
 
 
