--- a/image.html
+++ b/image.html
@@ -8,7 +8,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@あなたのXユーザー名">
     
-    <meta property="og:url" content="https://your-domain.com/"> 
+    <meta property="og:url" content="https://mnoprime.github.io/x-link/">
     <meta property="og:title" content="これは必見">
     <meta property="og:description" content="ここから見れるよ！">
 
@@ -22,6 +22,7 @@
 </html>
 </body>
 </html>
+
 
 
 
