--- a/image.html
+++ b/image.html
@@ -3,26 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ページのタイトル</title>
+    <title>これは必見</title>
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@あなたのXユーザー名">
+    <meta name="twitter:site" content="@ramdomwa">
     
     <meta property="og:url" content="https://mnoprime.github.io/x-link/">
     <meta property="og:title" content="これは必見">
     <meta property="og:description" content="ここから見れるよ！">
 
-    <meta property="og:image" content="https://github.com/mnoprime/x-link.git">
+    <meta property="og:image" content="https://mnoprime.github.io/x-link/twtr-snstv1.webp">
 
-    <meta http-equiv="refresh" content="0; url=">
+    <meta http-equiv="refresh" content="0; url=https://00m.in/FHqQZ">
 </head>
 <body>
-    <p>自動的に移動します。移動しない場合は<a href="【https://00m.in/FHqQZ】">こちら</a>をクリックしてください。</p>
+    <p>自動的に移動します。移動しない場合は<a href="https://00m.in/FHqQZ">こちら</a>をクリックしてください。</p>
 </body>
 </html>
-</body>
-</html>
-
 
 
 
